--- a/css/custom.css
+++ b/css/custom.css
@@ -8,3 +8,14 @@
 * {
     font-family: 'Inter', sans-serif;
 }
+
+html, body {
+    overflow: hidden;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.icon-size {
+    font-size: 2rem;
+}
